@@ -1,6 +1,5 @@
 Changes
 FSEvents.xs
-hints/darwin.pl
 lib/Mac/FSEvents.pm
 lib/Mac/FSEvents/Event.pm
 MacVersion.pm
